Fix web cursor transparency when scaled.

Custom web cursors with transparency were not displaying correctly when
scaled, for example when device scale factor is not 1.0. The cursor
would become fully opaque after scaling.

The helper function skia::ImageOperations::Resize() doesn't appear to
handle the alpha channel correctly with unpremultiplied alpha SkBitmaps.
SkPixmap::scaleImage() does support unpremultiplied alpha SkBitmaps so
use that instead. I filed https://crbug.com/919866 to see if
skia::ImageOperations::Resize() could just use SkPixmap::scaleImage() at
some point.

Also add a test for ScaleAndRotateCursorBitmapAndHotpoint(). There was
already a test that only ran with X11 and premultiplied alpha SkBitmap.
Make the test run on all platforms and parameterize it to run with both
alpha types.

Bug: 829517, 919866
Change-Id: I12213b03a2569240cf4206869906fb0834217155
Reviewed-on: https://chromium-review.googlesource.com/c/1400356
Commit-Queue: kylechar <kylechar@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Mike Klein <mtklein@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623233}