content/test/content_test_suite.h
@@ -10,6 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/compiler_specific.h"
 #include "base/macros.h"
+#include "base/test/test_discardable_memory_allocator.h"
 #include "build/build_config.h"
 #include "content/public/test/content_test_suite_base.h"
 
@@ -28,6 +29,8 @@ class ContentTestSuite : public ContentTestSuiteBase {
   void Initialize() override;
 
  private:
+  base::TestDiscardableMemoryAllocator discardable_memory_allocator_;
+
 #if defined(OS_WIN)
   base::win::ScopedCOMInitializer com_initializer_;
 #endif
